removed caroussel stepper to stop align bug

--- a/assets/css/home.scss
+++ b/assets/css/home.scss
@@ -7,7 +7,7 @@
 
 .carousel-item {
     div {
-        width: 70%;
+        width: 100%;
         text-align: justify;
         margin: auto;
         div {
